<resources>
    <string name="app_name">Night Canteen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">LOGIN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to signup -->
    <string name="confirm_password">Cofirm Password</string>
    <string name="username">Name</string>
    <string name="select_block_spinner">Select Block</string>
    <string-array name="spinner_entries">
        <item>Select Block</item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>7th</item>
        <item>8th</item>
        <item>M.T.-I</item>
        <item>M.T.-II</item>
        <item>M.T.-III</item>
    </string-array>
    <string name="title_activity_home_activty">HomeActivty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Strings related to fragment_canteen_select -->
    <string-array name="canteen_select">
        <item>3rd Block NC</item>
        <item>7th Block NC</item>
        <item>8th Block NC</item>
    </string-array>

</resources>
